Service layer refactor part 1