@@ -1,6 +1,7 @@
 package com.example.booklibrary.mapper;
 
 import com.example.booklibrary.model.BookCatalog;
+import com.example.booklibrary.model.Catalog;
 import org.mapstruct.Mapper;
 
 import java.util.List;
@@ -8,9 +9,13 @@ import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface CatalogMapper {
-    default List<String> mapCatalogs(List<BookCatalog> catalogs) {
+    CatalogDTO toDto(Catalog catalog);
+
+    default List<CatalogDTO> toDtoList(List<Catalog> catalogs) {
         return catalogs.stream()
-                .map(bc -> bc.getCatalog().getName())
-                .collect(Collectors.toList());
+                .map(this::toDto)
+                .toList();
     }
+
+    // Можно добавить методы для других преобразований
 }
